2007-07-23  Hans Breuer  <hans@breuer.org>

	* lib/paper.c : instead of special casing for the thrid compiler
	just removed the superfluous inline on the get_paper_* functions
	Fixes bug #447737.

2007-07-22  Steffen Macke <sdteffen@gmail.com>

	* app/preferences.c:
	* objects/SISSI/sissi.h:
	* objects/SISSI/sissi_dialog.c:
	* sheets/SISSI.sheet.in: Fixed typos mentioned in bug report #45238;
	Thanks to Clytie Siddall
	* app/display.c:
	* app/makefile.msc:
	* app/app_procs.c:
	* app/exit_dialog.c:
	* app/exit_dialog.h:
	* app/Makefile.am:
	* app/interface.c:
	* app/interface.h:
	* app/makefile.mingw:
	* app/disp_callbacks.c: Patch from Patrick Hallinan 
	<patrick.j.hallinan@gmail.com, fixes the problem with the active diagram
	during resize; adds an asterisk to the tab when diagram has changed;
	adds a new dialog to save unsaved files when exiting
	* app/authors.h: Added Patrick Hallinan
	* app/commands.c: Bumped copyright year to 2007

2007-07-21  Hans Breuer  <hans@breuer.org>

	[maket it compile with msvc/win32]
	* lib/bounding_box.c : fix c99ism to 
	* objects/SISSI/*.c : dont include unistd.h unconditionally
	
	[warningectomy]
	* app/interface.c : cast GtkWindow to GtkWidget
	* lib/object.[hc] : const correctness
	* objects/FS/flow.c objects/standard/line.c : 
	connection_adjust_for_autogap take a Connection*, not the 
	specialization

	* lib/diagdkrenderer.c : implement draw_fill_rounded_rect to
	avoid seams

2007-07-19  Steffen Macke <sdteffen@gmail.com>

	* app/command.c: Updated website link to point to live.gnome.org/Dia; 
	fixes bug #456637

2007-07-17  Steffen Macke <sdteffen@gmail.com>

	* app/commands.c:
	* app/sheets_dialog_callbacks.c:
	* app/layer_dialog.c:
	* app/load_save.c:
	* app/interface.c:
	* app/interface.h
	* app/diagram_tree_menu.c:
	* app/menus.c:
	* objects/SISSI/sissi.h
	* objects/SISSI/site.c:
	* objects/SISSI/faraday.c:
	* objects/SISSI/area.c:
	* objects/SISSI/sissi_dialog.c:
	* objects/SISSI/room.c:
	* objects/SISSI/sissi_object.c: